# MirrorProxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  build.sh  compose.yaml  config.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: catalog.rs  config.rs  database.rs  email.rs  main.rs  oauth.rs  observability.rs  secrets.rs  static_assets.rs
crates/server/src/proxy/: anaconda.rs  clojars.rs  cocoapods.rs  composer.rs  cpan.rs  cran.rs  cratesio.rs  elpa.rs  flatpak.rs  github.rs  go.rs  guix.rs  hackage.rs  homebrew.rs  julia.rs  luarocks.rs  maven.rs  mod.rs  nix.rs  npm.rs  nuget.rs  nvm.rs  oci.rs  opam.rs  os.rs  pub_repository.rs  pypi.rs  rubygems.rs  rustup.rs  texlive.rs  winget.rs
deploy/prometheus/: alerts.yml
docs/: next.md  plan.md
scripts/: docker-build.sh  install.ps1  install.sh  smoke-clients.sh  smoke-local.ps1  smoke-os-clients.sh  smoke-public.sh
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: console.spec.ts
web/src/: app.test.tsx  main.tsx  preferences.test.ts  preferences.ts  styles.css
