[package]
name = "mirrorproxy-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mirrorproxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mirrorproxy-catalog = { path = "../catalog" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
