[package]
name = "mirrorproxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
http = "1"
include_dir = "0.7"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

